weights/indexビューファイル編集

--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -1,1 +1,12 @@
-<div>成功！！</div>
+<header>
+  <div class="weigtht-wrapper">
+    <h1>体重管理アプリ（仮）</h1>
+    <nav>
+      <ul>
+      <li><%= link_to 'ホーム', root_path %></li>
+      <li></li>
+      <li></li>
+      </ul>
+    </nav>
+  </div>
+</header>
