weights/indexビューファイル編集

--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -4,9 +4,17 @@
     <nav>
       <ul>
       <li><%= link_to 'ホーム', root_path %></li>
-      <li></li>
-      <li></li>
+      <li><%= link_to 'マイページ', '#' %></li>
+      <li><%= link_to 'ログアウト', '#' %></li>
       </ul>
     </nav>
   </div>
 </header>
+
+<main>
+  <div></div>
+</main>
+
+<footer>
+  <%= render "shared/footer" %>
+</footer>
