--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -12,7 +12,11 @@
 </header>
 
 <main>
-  <div></div>
+  <div class="main-wrapper">
+    <div class="main-top">
+      <h3>自分の体重を入力して、記録に残そう！<h3>
+    </div>
+  </div>
 </main>
 
 <footer>
