weight/indexビューファイル編集

--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -1,11 +1,11 @@
 <header>
-  <div class="weigtht-wrapper">
+  <div class="weight-wrapper">
     <h1>体重管理アプリ（仮）</h1>
     <nav>
       <ul>
       <li><%= link_to 'ホーム', root_path %></li>
-      <li><%= link_to 'マイページ', '#' %></li>
-      <li><%= link_to 'ログアウト', '#' %></li>
+      <li><%= link_to 'ログイン', new_user_registration_path %></li>
+      <li><%#= link_to '', '#' %></li>
       </ul>
     </nav>
   </div>
