weight/indexビューファイル編集

--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -1,13 +1,25 @@
 <header>
   <div class="weight-wrapper">
     <h1>体重管理アプリ（仮）</h1>
-    <nav>
-      <ul>
-      <li><%= link_to 'ホーム', root_path %></li>
-      <li><%= link_to 'ログイン', new_user_registration_path %></li>
-      <li><%#= link_to '', '#' %></li>
-      </ul>
-    </nav>
+    <% if user_signed_in? %>
+      <nav>
+        <ul>
+        <li><%= link_to 'ホーム', root_path %></li>
+        <li><%= link_to '使い方', '#' %></li>
+        <li><%= link_to 'マイページ', '#' %></li>
+        <li><%= link_to 'ログアウト', '#' %></li>
+        </ul>
+      </nav>
+    <% else %>
+      <nav>
+        <ul>
+        <li><%= link_to 'ホーム', root_path %></li>
+        <li><%= link_to '新規登録', new_user_registration_path %></li>
+        <li><%= link_to 'ログイン', new_user_session_path %></li>
+        <li><%= link_to '使い方', '#' %></li>
+        </ul>
+      </nav>
+    <% end %>
   </div>
 </header>
 
