--- a/app/assets/stylesheets/weight/index.css
+++ b/app/assets/stylesheets/weight/index.css
@@ -1,4 +1,32 @@
+
+.weight-wrapper {
+  display: flex;
+}
+
 .weight-wrapper > h1 {
   font-size: 32px;
   background-color: aqua;
+}
+
+nav {
+  width: 100%;
+  height: 70px;
+  background-color: dimgray;
+  line-height: 70px;
+}
+
+ul {
+  display: flex;
+  justify-content: right;
+}
+
+nav > ul > li > a {
+  display: block;
+  color: white;
+  margin-right: 35px;
+  box-sizing: border-box;
+}
+
+nav > ul > li > a:hover {
+  color: rgb(214, 237, 248);
 }
