--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .form-wrap {
-  background-color: bisque;
-  width: 70%;
+  // background-color: bisque;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -21,7 +21,7 @@ margin-bottom: 32px;
 .form-item {
   display: flex;
   line-height: 44px;
-  background: mediumaquamarine;
+  // background: mediumaquamarine;
   margin-top: 24px;
 }
 
@@ -52,7 +52,7 @@ margin-bottom: 32px;
 .default-info {
   padding: 8px;
   height: 32px;
-  width: 100%;
+  width: 70%;
 }
 
 .input-birth-wrap {
