--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -7,6 +7,10 @@
     <div class="main-top">
       <h3>自分の体重を入力して、記録に残そう！<h3>
     </div>
+    <div class="weight-wrap">
+      <p>体重を入力する</p>
+      
+    </div>
   </div>
 </main>
 
