--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
         <ul>
         <li><%= link_to 'ホーム', root_path %></li>
         <li><%= link_to '使い方', '#' %></li>
-        <li><%= link_to 'マイページ', '#' %></li>
+        <li><%= link_to 'マイページ', user_path(current_user.id) %></li>
         <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         </ul>
       </nav>
