--- a/app/assets/stylesheets/weights.scss
+++ b/app/assets/stylesheets/weights.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the weights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.top-photo {
+  background-image: image-url('22045062_s.jpg');
+  background-repeat: no-repeat;
+  background-size: 100vh 400px;
+  width: 100vw;
+  height: 400px;
+}
