weights/indexビューファイル編集

--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -3,6 +3,9 @@
 </header>
 
 <main>
+  <div class="top-photo">
+  </div>
+
   <div class="main-wrapper">
     <div class="main-top">
       <h3>自分の体重を入力して、記録に残そう！<h3>
