--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -74,7 +74,7 @@
 
 
   <div class="register-btn">
-    <%= f.submit "会員登録", class:"register-color" %>
+    <%= f.submit "会員登録", class:"register-detail" %>
   </div>
 
 </div>
