--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -67,3 +67,25 @@ margin-bottom: 32px;
   cursor: pointer;
   padding-left: 4px;
 }
+
+.register-btn {
+  text-align: center;
+  margin-top: 64px;
+}
+
+.register-detail:hover {
+  color: blue;
+  background-color: white;
+}
+
+.register-detail {
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 4px;
+  padding: 6px 12px;
+  color: white;
+  background-color: blue;
+  border: 2px solid blue;
+  border-radius: 4px;
+  transition: 0.3s;
+}
