--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <%= render "shared/header" %>
 
-  <%#= line_chart @weights.group_by_day(:created_at).sum(:weight) %>
+<div class="transition-text">
+  <h3><%= @user.first_name %>さんの体重遷移</h3>
+</div>
 
-<%#= line_chart [['赤', 50], ['青', 50]]%> 
+  <%= line_chart @weights.group_by_day(:created_at, series: false).sum(:weight), curve: false, width: "80vw", height: "50vh", xtitle: "日付", ytitle: "kg", discreate: true %>
