users/showビューファイル編集

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,14 @@
     <%= line_chart @weights.group_by_day(:created_at, series: false).sum(:weight), curve: false, width: "80vw", height: "50vh", xtitle: "日付", ytitle: "kg", discreate: true %>
 </div>
 
+<div class="personal-info">
+  <h3>アプリ登録時の情報<h3>
+  <p><%= @user.first_name %>さんの登録時の身長<p>
+  <%= @user.height %>cm
+
+  <p><%= @user.first_name %>さんの登録時の体重<p>
+  <%= @user.initial_weight %>kg
+
+  <p><%= @user.first_name %>さんの登録日<p>
+  <%= @user.created_at %>
+</div>
