--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
   <div class="weight-wrapper">
-    <h1>体重管理アプリ（仮）</h1>
+    <h1>体重管理アプリ</h1>
     <% if user_signed_in? %>
       <nav>
         <ul>
