users/showビューファイル編集

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 
   <tr>
     <th class="personal-list"><%= @user.first_name %>さんの登録時の身長</th>
-    <td class="personal-content"><%= @user.height %>kg</td>
+    <td class="personal-content"><%= @user.height %>cm</td>
   </tr>
 
   <tr>
