コメント追加
コメント追加しました。

--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -10,7 +10,7 @@
     <div class="main-top">
       <h3>自分の体重を入力して、記録に残そう！<h3>
     </div>
-
+    <%# 条件分岐 %>
     <% if user_signed_in? %>
       <div class="weight-wrap">
         <p>体重を入力する</p>
